objects/tffa__RecommendationFact__c.object
<CustomObject>
    <description>Recommendations  (generally products) resolved on the basis of the financial needs captured. Also tracks the action taken by the party against each recommendation. e.g. Accept, Dismiss, etc This helps in measuring the effectiveness of the financial need analysis.</description>
    <fields>
        <fullName>tffa__ApplicationFact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to application fact.</description>
        <label>Application fact (DEPRECATED)</label>
        <referenceTo>tffa__ApplicationFact__c</referenceTo>
        <relationshipLabel>Recommendation Facts</relationshipLabel>
        <relationshipName>RecommendationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional reference to application.</description>
        <label>Application (DEPRECATED)</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Recommendation Facts</relationshipLabel>
        <relationshipName>RecommendationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeedFact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to financial need fact.</description>
        <label>Financial Need fact</label>
        <referenceTo>tffa__FinancialNeedFact__c</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>RecommendationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional reference to financial need.</description>
        <label>Financial Need</label>
        <referenceTo>tffa__FinancialNeed__c</referenceTo>
        <relationshipLabel>Recommendation Facts</relationshipLabel>
        <relationshipName>RecommendationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>Recommendations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Category of recommended product. By default, this is derived from the first recommendation item of the recommendation.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recommended product. By default, this is derived from the first recommendation item of the recommendation.</description>
        <label>Financial Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Recommendation Facts</relationshipLabel>
        <relationshipName>RecommendationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recommended promotion. By default, this is derived from the first recommendation item of the recommendation.</description>
        <label>Promotion</label>
        <referenceTo>tffa__Promotion__c</referenceTo>
        <relationshipLabel>Recommendation Facts</relationshipLabel>
        <relationshipName>RecommendationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Recommendation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Recommendation.</description>
        <label>Recommendation</label>
        <referenceTo>tffa__Recommendation__c</referenceTo>
        <relationshipLabel>Facts</relationshipLabel>
        <relationshipName>Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <defaultValue>&quot;OPEN&quot;</defaultValue>
        <description>Status of the recommendation. This tracks the action taken by the party against this recommendation.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RecommendationStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Recommendation Fact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommendation Facts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>